tigerc/tests/snapshots/test_tokenizer__tokenizer_test24.snap
---
source: tigerc/tests/test_tokenizer.rs
expression: "tokenize_snapshot(\"tests/testcases/test24.tig\")"
---
Posed { node: Ident(let), pos: Pos { line: 2, column: 1 } }
Posed { node: Ident(var), pos: Pos { line: 3, column: 5 } }
Posed { node: Ident(d), pos: Pos { line: 3, column: 9 } }
Posed { node: Assign, pos: Pos { line: 3, column: 10 } }
Posed { node: Number(0), pos: Pos { line: 3, column: 12 } }
Posed { node: Ident(in), pos: Pos { line: 4, column: 1 } }
Posed { node: Ident(d), pos: Pos { line: 5, column: 5 } }
Posed { node: OpenBracket, pos: Pos { line: 5, column: 6 } }
Posed { node: Number(3), pos: Pos { line: 5, column: 7 } }
Posed { node: CloseBracket, pos: Pos { line: 5, column: 8 } }
Posed { node: Ident(end), pos: Pos { line: 6, column: 1 } }
