tigerc/tests/snapshots/test_tokenizer__tokenizer_test26.snap
---
source: tigerc/tests/test_tokenizer.rs
expression: "tokenize_snapshot(\"tests/testcases/test26.tig\")"
---
Posed { node: Number(3), pos: Pos { line: 3, column: 1 } }
Posed { node: Plus, pos: Pos { line: 3, column: 3 } }
Posed { node: Str(var), pos: Pos { line: 3, column: 5 } }
