tigerc/tests/snapshots/test_tokenizer__tokenizer_test29.snap
---
source: tigerc/tests/test_tokenizer.rs
expression: "tokenize_snapshot(\"tests/testcases/test29.tig\")"
---
Posed { node: Ident(let), pos: Pos { line: 3, column: 1 } }
Posed { node: Ident(type), pos: Pos { line: 4, column: 5 } }
Posed { node: Ident(arrtype1), pos: Pos { line: 4, column: 10 } }
Posed { node: Eq, pos: Pos { line: 4, column: 19 } }
Posed { node: Ident(array), pos: Pos { line: 4, column: 21 } }
Posed { node: Ident(of), pos: Pos { line: 4, column: 27 } }
Posed { node: Ident(int), pos: Pos { line: 4, column: 30 } }
Posed { node: Ident(type), pos: Pos { line: 5, column: 5 } }
Posed { node: Ident(arrtype2), pos: Pos { line: 5, column: 10 } }
Posed { node: Eq, pos: Pos { line: 5, column: 19 } }
Posed { node: Ident(array), pos: Pos { line: 5, column: 21 } }
Posed { node: Ident(of), pos: Pos { line: 5, column: 27 } }
Posed { node: Ident(int), pos: Pos { line: 5, column: 30 } }
Posed { node: Ident(var), pos: Pos { line: 7, column: 5 } }
Posed { node: Ident(arr1), pos: Pos { line: 7, column: 9 } }
Posed { node: Colon, pos: Pos { line: 7, column: 13 } }
Posed { node: Ident(arrtype1), pos: Pos { line: 7, column: 15 } }
Posed { node: Assign, pos: Pos { line: 7, column: 24 } }
Posed { node: Ident(arrtype2), pos: Pos { line: 7, column: 27 } }
Posed { node: OpenBracket, pos: Pos { line: 7, column: 36 } }
Posed { node: Number(10), pos: Pos { line: 7, column: 37 } }
Posed { node: CloseBracket, pos: Pos { line: 7, column: 39 } }
Posed { node: Ident(of), pos: Pos { line: 7, column: 41 } }
Posed { node: Number(0), pos: Pos { line: 7, column: 44 } }
Posed { node: Ident(in), pos: Pos { line: 8, column: 1 } }
Posed { node: Ident(arr1), pos: Pos { line: 9, column: 5 } }
Posed { node: Ident(end), pos: Pos { line: 10, column: 1 } }
